--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e" ,
+    "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
   "private": true,
@@ -24,6 +24,9 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "firebase": "^5.9.2",
+    "jspdf": "^1.5.3",
+    "pdfmake": "^0.1.64",
+    "pdfmake-wrapper": "^2.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
