--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "pdfmake": "^0.1.64",
     "pdfmake-wrapper": "^2.0.0",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.9.0",
+    "websql": "^1.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
