--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,4 +1,5 @@
 {
     "ip":"http://localhost",
-    "port":"9090"
+    "port":"9090",
+    "ws_envios_dian":"https://apidian.grupcadaya.com/Factura_electronica/generarFacturaData"
 }
