--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,5 +1,8 @@
 {
     "ip":"http://localhost",
     "port":"9090",
-    "ws_envios_dian":"https://apidian.grupcadaya.com/Factura_electronica/generarFacturaData"
+    "invoice_status":"https://apidian.grupcadaya.com/Factura_electronica/getStatus",
+    "get_xml":"https://apidian.grupcadaya.com/Factura_electronica/getXmlBase64",
+    "ws_envios_dian":"https://apidian.grupcadaya.com/Factura_electronica/generarFacturaData",
+    "key_invoice":"$argon2i$v=19$m=65536,t=4,p=1$S3FmTVdCbVU3MGFGUFJXYw$WDRmiro3iNayXXZ9bieioXk4CPNuPiFFKYKyiFqhplc"
 }
