--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -4,5 +4,5 @@
     "invoice_status":"https://apidian.grupcadaya.com/Factura_electronica/getStatus",
     "get_xml":"https://apidian.grupcadaya.com/Factura_electronica/getXmlBase64",
     "ws_envios_dian":"https://apidian.grupcadaya.com/Factura_electronica/generarFacturaData",
-    "key_invoice":"$argon2i$v=19$m=65536,t=4,p=1$T3NhZ21ET0RmUkc1dUtpcQ$IH1TserbS5U0CmivYKJWjEaBue86G3CpLWEKroxnxtY"
+    "key_invoice":"$argon2i$v=19$m=65536,t=4,p=1$S3FmTVdCbVU3MGFGUFJXYw$WDRmiro3iNayXXZ9bieioXk4CPNuPiFFKYKyiFqhplc"
 }
