--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/fire": "^5.1.2",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "express": "^4.16.4",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/fire": "^5.4.2",
+    "@angular/forms": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
+    "core-js": "^2.6.12",
+    "express": "^4.17.1",
     "firebase": "^5.9.2",
     "jspdf": "^1.5.3",
     "ngx-qrcode2": "0.0.9",
-    "pdfmake": "^0.1.64",
-    "pdfmake-wrapper": "^2.0.0",
+    "pdfmake": "^0.1.70",
+    "pdfmake-wrapper": "^2.1.1",
     "rxjs": "~6.3.3",
-    "socket.io-client": "^2.3.0",
-    "tslib": "^1.9.0",
+    "socket.io-client": "^2.4.0",
+    "tslib": "^1.14.1",
     "websql": "^1.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/cors": "^2.8.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/morgan": "^1.7.35",
+    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular/cli": "^7.3.10",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
+    "@types/cors": "^2.8.10",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/morgan": "^1.9.2",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
